--- a/lectur/lectur_app/templates/index.html
+++ b/lectur/lectur_app/templates/index.html
@@ -130,17 +130,17 @@
 				</div>
 
 
-<H1 class="texto-amarillo" align="center">  <strong>¡RETOS GRUPALES!</strong> </H1>
+<H1 class="texto-medio-ind" align="center">  <strong>¡SUBE DE NIVEL!</strong> </H1>
 <br>
 
-		<H1 class="texto-contenido" align="center">  ¡Participa en los retos de creación con tu comunidad <br><br>lectora y haz nuevos amigos al participar activamente! </H1>
+		<H1 class="texto-par-dos" align="center">  Completa las misiones para subir de nivel y demostrarles a todos lo buen escritor que eres.</H1>
 <br><br><br>
 				</div>
 
 		</div>
 
 
------
+
 
 <div class="container-fluid" style=" background-size: cover; background-image: url('{% static 'imagenes/parte-tres.jpg' %}'); ">
 
@@ -148,7 +148,8 @@
 			<div><H1 class="texto-medio-ind" align="center"> ¡RECIBE RECOMPENSAS!</H1></div>
 
 				<hr class="linea"> </hr>
-<div class=" col-md-8 col-md-push-2 col-sm-12 texto-par-dos" align="center" style="padding-bottom: 40px;">
+
+<div class=" col-md-6 col-md-push-3 col-sm-12 texto-par-dos" align="center" style ="padding-bottom: 30px;">
 <p>Participa activamente de las actividades y discusiones de las comunidades que sigues para subir de rango y adquirir boniﬁcaciones redimibles en el mundo real.</p>
 <div class="imagen-computador" style="padding-top: 20px;"> 
 					<img  src='{% static 'imagenes/computador.png' %}''> 
@@ -192,64 +193,53 @@
 
 
 
+	<!-- espacio nombre -->
+	<div class="row">
 
-					<!-- espacio nombre -->
-					<div class="row">
+		<div class="col-xs-5 col-md-5 col-xs-12 col-sm-12 ">
 
-						<div class="col-xs-5 col-md-5 col-xs-12 col-sm-12 ">
+			<div class="row campo texto-par-dos">
+				<span ><b>Nombre: </b></span><br>
+				<span><input   class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" type="text" size="30" maxlength="30" name="nombre" placeholder="Nombre"></span>
+			</div><!-- fin espacio nombre -->
+			<!-- espacio email -->
+			<div class="row campo texto-par-dos">
+				<span ><b>Email: </b></span><br>
+				<span><input type="text" class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" size="30" maxlength="30" name="email" placeholder="Email"></span>
+			</div><!-- fin espacio email -->
 
-							<div class="row campo texto-par-dosb">
-								<span ><b>Nombre: </b></span><br>
-								<span><input   class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" type="text" size="30" maxlength="30" name="nombre" placeholder="Nombre"></span>
-							</div><!-- fin espacio nombre -->
-							<!-- espacio email -->
-							<div class="row campo texto-par-dosb">
-								<span ><b>Email: </b></span><br>
-								<span><input type="text" class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" size="30" maxlength="30" name="email" placeholder="Email"></span>
-							</div><!-- fin espacio email -->
-
-							<!-- espacio asunto-->
-							<div class="row campo texto-par-dosb">
-								<span ><b>Asunto: </b></span><br>
-								<span><input class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" type="text" size="30" maxlength="30" name="asunto" placeholder="Asunto"></span>
-							</div><!-- fin espacio asunto -->
-						</div>
-
-
-
-						<div class="col-xs-1 col-md-1 col-xs-12 col-sm-12"> </div>
-						<div class="col-xs-6 col-md-6 col-xs-12 col-sm-12">
-
-							<!-- espacio mensaje -->
-							<div class="row campo texto-par-dosb">
-								<span  ><b>Mensaje: </b></span><br>
-								<span><textarea name="comentarios"  class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" rows="10" cols="32" placeholder="Mensaje"></textarea></span>
-							</div><!-- fin espacio mensaje -->
-
-							<!-- Boton enviar mensaje -->
-					
+			<!-- espacio asunto-->
+			<div class="row campo texto-par-dos">
+				<span ><b>Asunto: </b></span><br>
+				<span><input class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" type="text" size="30" maxlength="30" name="asunto" placeholder="Asunto" ></span>
+			</div><!-- fin espacio asunto -->
+		</div>
 
 
 
 
+		<div class="col-xs-6 col-md-6 col-xs-12 col-sm-12 col-xs-offset-1 col-md-offset-1 col-xs-offset-1 col-sm-offset-1">
 
-<div class="sobre-boton-registro" >
-				<a href="" class="boton-registro " style = "margin-top: 100px;" align="center">
-			
-					ENVIAR
+			<!-- espacio mensaje -->
+			<div class="row campo texto-par-dos">
+				<span  ><b>Mensaje: </b></span><br>
+				<span><textarea name="comentarios"  class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" rows="8" cols="32" placeholder="Mensaje"></textarea></span>
+			</div><!-- fin espacio mensaje -->
 
-				</a>
-			</div>	
+			<!-- Boton enviar mensaje -->
+<div class="" style="margin-top: 15px; margin-bottom: 30px;" align="right">
+					<a href="" class="boton-actividad" >
+						
+						Enviar
 
+					</a>
+				</div>
 
+			<!-- fin espacio enviar mensaje -->
 
-						<!-- fin espacio enviar mensaje -->
-
-						</div>
-						<!-- final formulario mensaje -->
-					</div>
-
-
+		</div>
+		<!-- final formulario mensaje -->
+	</div>
 
 
 
