--- a/lectur/lectur_app/templates/perfil.html
+++ b/lectur/lectur_app/templates/perfil.html
@@ -1,6 +1,4 @@
-
 {% extends 'base.html' %}
-
 {% load staticfiles %}
 {% block content %}
 
@@ -25,7 +23,7 @@
 	
 
 <div class="row">
-<div class="col-md-12"> <h3>Comunidades a las que pertenezco</h3>
+<div class="col-md-12"> <h3>Mi perfil</h3>
 </div>	
 	
 </div>
