--- a/lectur/lectur_app/templates/vista_actividades_comunidad.html
+++ b/lectur/lectur_app/templates/vista_actividades_comunidad.html
@@ -2,13 +2,13 @@
 
 <div class="col-md-12 seccion-actividad ">
 
-<div class="row" style="background-color: rgba(243,247,248,1); color: rgb(53,53,76);">
+<div class="row boton-foro" style="background-color: rgba(243,247,248,1); color: rgb(53,53,76);">
 	
 	<div class="col-md-3 no-padding"><div class="imagen-actividad" style="background-image: url('{{taller.imagen.url}}')">
  </div>
 
   </div>
- <div class="col-md-9 texto-par-dos" style="padding-bottom: 20px;">
+ <div class="col-md-9 texto-par-dos " style="padding-bottom: 20px;">
 
 
  <strong>{{taller.nombre}}</strong> 
