--- a/lectur/lectur_app/templates/explora_comunidades.html
+++ b/lectur/lectur_app/templates/explora_comunidades.html
@@ -3,19 +3,63 @@
 {% load staticfiles %}
 {% block content %}
 <div class="container">
+	<div class="col-md-12 texto-medio">
+		<br>
+		<h1>
+			Mi perfil
+		</h1></div>
+
+		{%if user and user.lector%}
+		<div class="col-md-3" >
+
+			<h1>{{user.lector.first_name}} {{perfil.user.last_name}} </h1>
+			<p>{{user.lector.descripcion}}</p>		
+
+			<div class="redondo" style= "height: 100%; padding-top: 100%; position: relative; background-position: center; background-size: cover; background-image: url('{{user.lector.imagen.url}}');"></div></div>
+
+			{%endif%}
+			<div class="col-md-4"></div>
+			<div class="col-md-5">
+
+				<div class="container-fluid">
+
+					
+					{% include "ventana_recompensa.html" with id='titulo_reto' %}
+
+
+					<div class="col-md-3"> 
+						<img src='{% static 'imagenes/icono_mision2.png' %}' style="margin: 10px auto; width: 100%;height: auto;">
+					</div>
+
+					<div class="col-md-3"> 
+						<img src='{% static 'imagenes/icono_mision3.png' %}' style="margin: 10px auto; width: 100%;height: auto;">
+					</div>
+
+				</div>    
+
+<!--    
+				<p>Completa las 3 tareas siguientes para subir de nivel:</p>
+				<p>1- Unirse a una comunidad lectora de Tulia.</p> 
+				<p>2- Crear una entrada nueva al foro de recomendación de esa comunidad lectora.</p>
+				<p>3- Comentar la publicación de otro usuario en el foro de discusión.</p>-->
+			</div>
+
 <div class="col-md-12 texto-medio">
-<br>
-<h1>
-Comunidades a las que pertenezco	
-</h1></div>
-
-{% for c in comunidades %}
-{% include "comunidad_vista_min.html" with comunidad=c %}
-
-{% endfor %}
+		<br>
+		<h1>
+			Comunidades a las que pertenezco
+		</h1></div>
+			<div class="col-md-12" align="center" style="padding-bottom: 50px; padding-top: 0px;">
 
 
-</div>
+				{% for c in comunidades %}
+				{% include "comunidad_vista_min.html" with comunidad=c %}
+
+				{% endfor %}
+
+			</div>
+
+		</div>
 
 
-{% endblock content %}
+		{% endblock content %}
