--- a/lectur/static/css/estilosContacto.css
+++ b/lectur/static/css/estilosContacto.css
@@ -20,7 +20,7 @@ header {
 }
 /*************** Contenedor verde ***************/
 .verde {
- background: #1B1239;
+ background: #2d388a;
  height: 60px;
  line-height: 13px;
  padding-right: 1em;
@@ -33,9 +33,10 @@ header {
 
 .header-index{
   width: 100%;
-  height :410px;
+  height :380px;
   background-size: cover;
   text-align: center;
+  position: relative;
 }
 /*************** logo header ***************/
 .logo-header {
@@ -53,18 +54,18 @@ header {
 
 .imagen-logo{
   height: 40px;
-  width:auto;
+  width:auto;x 
 }
 .logo-index{
 
-  width: 200px;
+  width: 240px;
   margin: 0 auto;
   margin-top: 90px;
 }
 
 .imagen-logo-index{
   height: auto;
-  width: 150px;
+  width: 100%;
 }
 .icono-figura{
 
@@ -87,13 +88,14 @@ header {
     }
 
 .imagen-computador{
-  width:400px;
+  width:330px;
   margin: 20px auto;
 }
 
 .imagen-computador img{
   width:100%; 
   height:auto;
+  
     }
 
 .fijo{
@@ -138,14 +140,40 @@ list-style-type: none;
 
 .texto-header{
   color: white;
-  font-family:"roboto";
-  font-size: 17px;
+  font-family:"Raleway";
+  font-size: 25px;
+  font-weight: lighter;
+  margin-top: 20px;
 }
 
+.texto-par-dos{
+  color: #5e5e5e;
+  font-family:"roboto";
+  font-size: 17px;
+  font-weight: lighter;
+  margin-top: 5px;
+  padding-top: 0px;
+}
+
+.texto-par-dosb{
+  color: white;
+  font-family:"roboto";
+  font-size: 17px;
+  font-weight: lighter;
+  margin-top: 5px;
+  padding-top: 0px;
+}
 .texto-amarillo{
   color:#ECC42F;
   font-family:"roboto";
   font-size: 17px;
+}
+
+.linea{
+  border-radius: 10px;
+  background-color: #a4be32;
+  padding: 1px;
+  width: 15%;
 }
 
 .boton-registro{
@@ -154,18 +182,72 @@ list-style-type: none;
   font-family:"roboto";
   font-size: 17px;
   border-radius: 50px;
-  background-color: #1A98B0;
+  background-color: #a4be32;
   padding: 16px  20px;
 }
 
-.boton-registro:hover{
-  background-color: #3Ab8e0;
+.sobre-boton-registro{
+  text-align: center;
+  width: 100%;
+  position: absolute;
+  bottom: -15px;
 
+}
+
+.boton-registro:hover{
+  background-color: #8ca015;
  }
 
- .texto-medio{
-   color: #271B4A;
+
+/******** boton-actividad*******/
+.sobre-boton-actividad{
+  width: 100%;
+  position: absolute;
+  bottom: -15px;
+}
+
+.boton-actividad{
+  text-decoration: none !important;
+  color: #5e5e5e !important;
+  font-family:"roboto";
+  font-size: 17px;
+  border-radius: 6px;
+  border: #5e5e5e 2px solid;
+  padding: 7px  7px;
+}
+
+.boton-actividad:hover{
+color: #a4be32 !important;
+  font-family:"roboto";
+  font-size: 17px;
+  border-radius: 6px;
+  border: #a4be32 2px solid;
+  padding: 7px  7px;
+}
+
+
+/***** cierra boton-actividad ******/
+ .comunidades:hover{
+  background-color: #8ca015;
+ }
+
+ .texto-medio-ind{
+   color: #5e5e5e;
    font-family:"roboto";
+   font-size: 26px;
+   padding-top: 70px;
+ }
+
+ .texto-medio-indb{
+   color: white;
+   font-family:"roboto";
+   font-size: 26px;
+   padding-top: 70px;
+ }
+
+  .texto-medio{
+   color: #6d9acf;
+   font-family:"Raleway";
    font-size: 26px;
  }
 
@@ -176,8 +258,8 @@ list-style-type: none;
  }
 
   .titulo-contenido{
-   color: #271B4A;
-   font-family:"roboto";
+   color: #ddf458;
+   font-family:"Raleway";
    font-size: 17px;
  }
 
@@ -188,7 +270,7 @@ list-style-type: none;
  border-bottom-width: 5px;
  /*border-bottom-color: #3Ab8e0;*/
 
- border-bottom-color: #dea13f; 
+ border-bottom-color: #a4be32; 
  }
  .seccion-header{
   height: 60px;
@@ -201,7 +283,7 @@ color: white;
 
   .seccion-header a:hover{
     text-decoration: none;
-    color: #dea13f; 
+    color: #a4be32; 
   }
 
  /******************* Sección mis comunidades ********************/
@@ -213,10 +295,12 @@ color: white;
 .sobre-imagen{
  position: absolute; 
  bottom: 0px; 
-  background-color: rgba(27,18,57,0.7);
+  background-color: rgba(45,56,138,0.6);
  color: white;width: 94%; 
+ font-family: "roboto";
  height: 100px; 
- padding: 0px 8px; 
+ padding: 125px 8px; 
+ text-align:center;
   }
 
 /******************* Seccion actividades ********************/
@@ -238,7 +322,7 @@ color: white;
 .imagen-actividad{
   width: 100%;
   padding-top: 100%;
-  background-color: pink;
+  background-color: white;
   background-position: center; background-size: cover; 
 
 }
@@ -251,32 +335,75 @@ color: white;
   padding-top: 10px;
 }
 
+ /******************* Sección foro ********************/
+ .seccion-rec-pop{
+  color: white;
+  text-align: center;
+ 
+  padding: 0px;
+  margin-top: 15px;
+ }
+.seccion-rec-pop  div{
+background-color: rgb(164,190,50);
+   height: 50px;
+   padding-top: 9px;
+  border-color: white;
+  border-style: solid;
+  border-width: 5px;
+  }
+
+  .estrella-icono{
+color :#ffcf00;
+padding-top: 20px;
+  }
+
+ .comentario{
+  color:#8a91aa;
+ }
+
+
+
+/******** boton-foro*******/
+.boton-foro{
+   text-decoration: none !important;
+  
+  font-family:"roboto";
+  font-size: 17px;
+  border-radius: 6px;
+  border: #b2b1b1 1px solid;
+  padding: 7px  7px;
+}
+
+
+.franja-foro{
+  background-color: #a4be32;
+  height: 60px;
+}
  /******************* Sección mis comunidades ********************/
  .submenu-comuni{
   color:white;
   padding-top: 10px;
-  font-family: roboto;
+  font-family: "roboto";
   height: 40px;
-  background-color: rgba(27,18,57,0.3);
+  background-color: rgba(45,56,138,0.3);
  }
  .submenu-comuni:hover {
-  background-color: rgba(27,18,57,0.6);
+  background-color: rgba(45,56,138,0.6);
  }
  .submenu-comuni-selec {
-  background-color: rgb(27,18,57);
+  background-color: rgb(45,56,138);
  }
 
  .submenu-comuni-selec:hover {
-  background-color: rgb(27,18,57);
+  background-color: rgb(45,56,138);
  }
-
 
  .comunidad-fondo{
   text-align: center;
-  min-height: 270px;
+  min-height: 310px;
   background-size: cover;
   background-position: center;
-  padding-top: 100px;
+  padding-top: 70px;
 
  }
 
@@ -291,10 +418,10 @@ color: white;
   color:white;
   font-family:roboto;
   font-weight:bolder;
-  font-size: 14px;
+  font-size: 20px;
   text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
   margin-left: 5px; 
-  background-color: rgb(222,161,63);
+  background-color: rgb(163,10,163);
   padding: 5px;
   border-left-style: solid;
   border-left-width: 3px;
@@ -305,12 +432,18 @@ color: white;
   color:white;
   text-decoration: none;
 
-  background-color: rgb(181,43,45);  
+  background-color: rgb(119,7,119);  
  }
 
 .franja-comunidad{
-   background-color: rgb(27,18,57);
-   height: 60px;
+  background-color: #2d388a;
+  height: 60px;
+}
+
+.franja-index{
+  background-color: #f4f8f9;
+  height: 50px;
+  margin-top: 30px; 
 }
 
 .letra-submen h1{
@@ -318,7 +451,40 @@ color: white;
   font-size: 20px;
 }
 
+/******************** Explora comunidades ********************/
+.filtro-exploracion{
+  padding: 15px 50px;
+}
 
+.texto-medio-filtro{
+color: white;
+font-family:"Raleway";
+font-size: 26px;
+}
+
+/******************** Formulario para ubicación ********************/
+.boton-tipo{
+  font-family: "roboto" "san-serif";
+  font-size: 12px;
+  border-color: #5e5e5e;
+  border-width: 2px;
+  background-color: rgba(243,247,248,0.4);
+  border-radius: 6px;
+  border-style: solid;
+  color: #5e5e5e;
+  padding: 10px;
+}
+.boton-tipo:hover {
+background-color: rgba(223,227,228,1);
+}
+.boton-tipo-activo{  
+  background-color: #6d9acf;
+  color:white;
+}
+
+.boton-tipo i{
+  font-size: 25px;
+}
 
 /******************** Vista miembros de comunidades ********************/
 .circulo-perfil{
@@ -331,7 +497,7 @@ background-position: center;
 border-radius: 50%;
 }
 .circulo-perfil-borde{
-  padding: 10px; border-color: #1b1239; border-style: solid; border-width: 5px;
+  padding: 10px; border-color: #6d9acf; border-style: solid; border-width: 5px;
 
 }
 
@@ -345,7 +511,7 @@ border-radius: 50%;
 }
 
 .nombre-usuario{
-  text-align: center; 
+  dalign: center; 
   font-size: 17px; 
   font-family: 'roboto'; 
   color: #1b1239;
@@ -380,12 +546,34 @@ border-radius: 50%;
 	font-weight: 19em;
 	margin-bottom: 0;
 	margin-left: 15px;
-	padding-top: 20px
+	padding-top: 20px;
 }
 .navIndex li a{
 
   	color:white;
   	font-family: "roboto";
+   }
+
+   .menu-imagen-header{
+list-style: none;
+float: right;
+}
+.menu-imagen-header li{
+  display: inline-block;
+
+}
+.menu-imagen-header li a{
+
+    font-family: "roboto";
+   }
+
+.menu-imagen-header   .dropdown{
+    vertical-align: top;
+    margin-top: 25px;
+    padding-bottom: 25px;
+   }
+   .menu-imagen-header .caret{
+      border-width: 6px;
    }
 
    .imagen-medio{
@@ -396,15 +584,18 @@ border-radius: 50%;
    }
 
 .header-formulario{
-font-family: "roboto";
+font-family: "Raleway";
 margin-bottom: 20px;
   } 
 
 h3.header-formulario{
-color: red;
+color: #a3ba1a;
 }
 h4.header-formulario{
-  color: blue;
+  color: #393e54;
+  font-family: "roboto";
+  line-height: 120%;
+  margin-left: 8px;
 }
 .elemento_formulario{
   width:100%;
@@ -422,7 +613,7 @@ h4.header-formulario{
   font-size: 17px;
   background-color: #1A98B0;
   padding: 8px  15px;
-  margin-top: 10px;
+  margin-top: 40px;
 }
 
 .boton-formulario:hover{
@@ -433,17 +624,22 @@ h4.header-formulario{
 
 	padding-right: 15em;
 }
+.elemento_formulario img{
+  width: 50%;
+  height: auto;
+  margin: auto;
+}
 
-.elemento_formulario input[type="text"],.elemento_formulario input[type="password"], .elemento_formulario input[type="email"]{
+.elemento_formulario input[type="text"],.elemento_formulario input[type="password"], .elemento_formulario input[type="email"], .elemento_formulario input[type="url"], .elemento_formulario textarea{
   width: 100%;
   padding-left: 5px;
 
 }
 .campo-incorrecto{
-  background-color: red;
+  background-color: #ffc2c2;
 }
 .campo-correcto{
-  background-color: green;
+  background-color: #e9f991;
 }
 
 .campo {
