--- a/lectur/lectur_app/templates/index.html
+++ b/lectur/lectur_app/templates/index.html
@@ -83,7 +83,7 @@
 <div style="position: absolute; top: 0px; border-style: solid; border-width: 40px; border-color: white rgba(0,0,0,0) rgba(0,0,0,0) rgba(0,0,0,0); width: 5%; left: 47.5%; padding: 0px; "> </div>
 
 
-<div style="position: absolute; bottom: 0px; border-style: solid; border-width: 40px; border-color:  rgba(0,0,0,0) rgba(0,0,0,0) #f4f8f9 rgba(0,0,0,0) ; width: 5%; left: 47.5%; padding: 0px; "> </div>
+<!--<div style="position: absolute; bottom: 0px; border-style: solid; border-width: 40px; border-color:  rgba(0,0,0,0) rgba(0,0,0,0) #f4f8f9 rgba(0,0,0,0) ; width: 5%; left: 47.5%; padding: 0px; "> </div> -->
 
 
 			<div><H1 class="texto-medio-indb" align="center"> EXPLORA, DESCUBRE, ENTÉRATE</H1></div>
@@ -120,28 +120,77 @@
 
 		</div></div>
 
-<div class="container-fluid" style=" background-color:#f4f8f9; ">
-        
+<div class="container-fluid" style=" background-size: cover; background-image: url('{% static 'imagenes/parte-cuatro.jpg' %}'); ">
+
+
+         <div class="col-md-4 col-xs-12 col-md-offset-7  col-xs-offset-0" >
+<br><br>
+          <div class="imagen-bombilla"> 
+					<img  src='{% static 'imagenes/trofeo.png' %}''> 
+				</div>
+
+ 
+<H1 class="texto-medio-ind" align="center">  <strong>¡Completa las misiones!</strong> </H1>
+<br>
+
+		<H1 class="texto-par-dos" align="center"> Obten medallas al cumplir las diferentes misiones que Tulia te propone y obtén más beneficios dentro de la plataforma.</H1>
+<br><br><br>
+				</div>
+
+
+
+
+<!-- 
+<div class="col-md-4 col-xs-12 col-md-offset-7  col-xs-offset-0" >
+<br><br>
+          <div class="imagen-bombilla"> 
+					<img  src='{% static 'imagenes/trofeo.png' %}''> 
+				</div>
+
+				<div class=" col-md-10 col-md-push-3 col-sm-12 texto-par-dos" align="center" style ="padding-bottom: 30px;">
+				<div><H1 class="texto-medio-ind" align="center"> ¡Completa las misiones!</H1></div>
+<p style ="padding-bottom: 30px;">Obten medallas al cumplir las diferentes misiones que Tulia te propone y obtén más beneficios dentro de la plataforma.</p></div>
+</div>-->
+        <!-- <div><H1 class="texto-medio-ind" align="center"> ¡Completa las misiones!</H1></div>
           
-          <div class="col-md-4 col-xs-12 col-md-offset-7  col-xs-offset-0" >
+				<hr class="linea"> </hr>
+
+
+
+
+
+<div class=" col-md-6 col-md-push-3 col-sm-12 texto-par-dos" align="center" style ="padding-bottom: 30px;">
+<p>Obten medallas al cumplir las diferentes misiones que Tulia te propone y obtén más beneficios dentro de la plataforma.</p>
+<div class="imagen-computador" style="padding-top: 20px;"> 
+					<img  src='{% static 'imagenes/computador.png' %}''> 
+				</div>-->
+
+</div>
+
+
+
+
+
+
+        <!--  <div class="col-md-4 col-xs-12 col-md-offset-7  col-xs-offset-0" >
 <br><br>
           <div class="imagen-bombilla"> 
 					<img  src='{% static 'imagenes/bombilla.png' %}''> 
 				</div>
 
-
-<H1 class="texto-medio-ind" align="center">  <strong>¡SUBE DE NIVEL!</strong> </H1>
+ 
+<H1 class="texto-medio-ind" align="center">  <strong>¡Completa las misiones!</strong> </H1>
 <br>
 
 		<H1 class="texto-par-dos" align="center">  Completa las misiones para subir de nivel y demostrarles a todos lo buen escritor que eres.</H1>
 <br><br><br>
-				</div>
+				</div>-->
 
 		</div>
 
 
-
-
+ 
+<!--
 <div class="container-fluid" style=" background-size: cover; background-image: url('{% static 'imagenes/parte-tres.jpg' %}'); ">
 
 				
@@ -155,7 +204,7 @@
 					<img  src='{% static 'imagenes/computador.png' %}''> 
 				</div>
 
-</div> </div>
+</div> </div>-->
 
 <!-- 
 <div class="col-md-5 col-xs-12 col-md-offset-1  col-xs-offset-0" >
