--- a/lectur/lectur_app/templates/explora_comunidades.html
+++ b/lectur/lectur_app/templates/explora_comunidades.html
@@ -6,36 +6,42 @@
 	<div class="col-md-12 texto-medio">
 		<br>
 		<h1>
-			Mi perfil
-		</h1></div>
 
-		{%if user and user.lector%}
-		<div class="col-md-3" >
+			<!--  	Mi perfil-->
+		</h1>
+	</div>
 
-			<h1>{{user.lector.first_name}} {{perfil.user.last_name}} </h1>
-			<p>{{user.lector.descripcion}}</p>		
-
-			<div class="redondo" style= "height: 100%; padding-top: 100%; position: relative; background-position: center; background-size: cover; background-image: url('{{user.lector.imagen.url}}');"></div></div>
-
-			{%endif%}
-			<div class="col-md-4"></div>
-			<div class="col-md-5">
-
-				<div class="container-fluid">
-
-					
-					{% include "ventana_recompensa.html" with id='titulo_reto' %}
+	{%if user and user.lector%}
+	<div class="col-md-3" style="padding-top: 50px;" >
 
 
-					<div class="col-md-3"> 
-						<img src='{% static 'imagenes/icono_mision2.png' %}' style="margin: 10px auto; width: 100%;height: auto;">
-					</div>
+		<div class="redondo" style= "height: 100%; padding-top: 100%; position: relative; background-position: center; background-size: cover; background-image: url('{{user.lector.imagen.url}}');"></div>
+	</div>
 
-					<div class="col-md-3"> 
-						<img src='{% static 'imagenes/icono_mision3.png' %}' style="margin: 10px auto; width: 100%;height: auto;">
-					</div>
+	<div class="col-md-4" style="padding-top: 30px; " ><h1 style="color:#2d388a;">{{user.first_name}} {{user.last_name}} </h1>
+		<p class="texto-par-dos" style="color:#2d388a;">{{user}}</p>	
 
-				</div>    
+		<div><p class="texto-par-dos" style=" padding-top: 30px;">{{user.lector.descripcion}}</p>	</div>	
+	</div>
+
+
+	{%endif%}
+	<div class="col-md-4"></div>
+	<div class="col-md-5">
+
+		<div class="container-fluid" style="padding-top: 50px; ">
+
+
+			{% for reto, premio in premios.items %}
+
+
+			{% include "ventana_recompensa.html" with id=reto.slug reto=reto premios=premios %}
+
+			{%empty%}
+			¡¡¡Deja de ser un perdedor y unete a una comunidad!!!
+			{%endfor%}
+
+		</div>    
 
 <!--    
 				<p>Completa las 3 tareas siguientes para subir de nivel:</p>
@@ -44,22 +50,69 @@
 				<p>3- Comentar la publicación de otro usuario en el foro de discusión.</p>-->
 			</div>
 
+
+			<!-- inicio parte como subir de nivel -->
+			<div class="row" data-toggle="collapse" data-target="#demo">
+			<div class="col-md-8 col-md-offset-2" style="margin-top: 50px; border-color: #f18547; border-style:  solid none; border-width: 1px; ">
+			<p  style="padding-top: 5px; text-align: center;  font-size: 25px; font-family: 'Yantramanav', sans-serif; color: #e17537;">¿Quieres obtener medallas?</p>
+
+
+			</div>
+			</div>
+
+
+
+			<div class="col-md-12" data-toggle="collapse" data-target="#demo">
+			<div style="position: relative;">
+				
+				<div style="position: absolute; top: 0px; border-style: solid; border-width: 20px; border-color: #e17537 rgba(0,0,0,0) rgba(0,0,0,0) rgba(0,0,0,0); width: 3%; left: 47.5%; padding: 0px;"  > </div>
+			</div>
+
+<div id="demo" class="collapse" style="width: 100%;">
+<br><br>
+<img src="{% static 'imagenes/instrucciones1.jpg' %}" style="width: 90%; height: auto; margin: 0px 5%;">
+
+</div>
+			</div>
+
+
+
+			
+
+	<!-- fin parte como subir de nivel -->
+
+			<div class="col-md-12 texto-medio">
+				<br>
+				<h1 style="font-family:'Yantramanav'; color: black; ">
+					Comunidades a las que pertenezco
+				</h1></div>
+				<div class="col-md-12" align="center" style="padding-bottom: 50px; padding-top: 0px;">
+
+
+					{% for c in comunidades %}
+					{% include "comunidad_vista_min.html" with comunidad=c %}
+					{% empty %}
+					<h1 class="col-md-12 texto-par-dos" style="padding-top: 50px;">Aún no has ingresado a ninguna comunidad, te invito a <a href="/explora/">explorar </a> las comunidades que se encuentran registradas en Tulia.</h1>
+					{% endfor %}
+				</div>
+
+
 <div class="col-md-12 texto-medio">
-		<br>
-		<h1>
-			Comunidades a las que pertenezco
-		</h1></div>
-			<div class="col-md-12" align="center" style="padding-bottom: 50px; padding-top: 0px;">
+				<br>
+				<h1 style="font-family:'Yantramanav'; color: black; ">
+					Actividades a las que asistiré
+				</h1></div>
+				<div class="col-md-12"  style="padding-bottom: 50px; padding-top: 0px;">
 
 
-				{% for c in comunidades %}
-				{% include "comunidad_vista_min.html" with comunidad=c %}
-
-				{% endfor %}
+					{% for t in talleres %}
+						{% include "vista_actividades_comunidad.html" with taller=t %}
+					{% empty %}
+					<h1 class="col-md-12 texto-par-dos" style="padding-top: 50px;">Aún no te has registrado a ninguna actividad, te invito a <a href="/explora/">explorar </a> las comunidades para ver los talleres que ofrecen.</h1>
+					{% endfor %}
+				</div>
 
 			</div>
 
-		</div>
 
-
-		{% endblock content %}
+			{% endblock content %}
